@@ -1,6 +1,7 @@
 Release 0.1.2 (pending)
 ==========================
 
+- Apply optional arguments to settings on setting key match
 - Added optional stream bitpacking with "bitpack" setting
 
 Release 0.1.1 (2017-04-29)
